--- a/CharacterInspect/appsettings.json
+++ b/CharacterInspect/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "BlizzardApi": {
+    "ClientId": "5c3dd03b94744304820bf4189dfdd01c",
+    "ClientSecret": "PAUtiU4VLRsTvt4F7tJlPyzFGitTmETs"
+  }
 }
